Move tests from test.html to tests/index.html

--- a/functions/tests/index.html
+++ b/functions/tests/index.html
@@ -202,7 +202,7 @@
 	</section>
 
 	<script type="module">
-		import * as Functions from "./functions.js";
+		import * as Functions from "../functions.js";
 
 		function functionEvaluation (test, result, expected) {
 			let r = eval(test.textContent);
